[gd_scene load_steps=6 format=3 uid="uid://ca4cwklqvmbsc"]

[ext_resource type="Script" path="res://Game/Scenes/Player/GunCast/gun_cast.gd" id="1_a2okf"]
[ext_resource type="PackedScene" uid="uid://6287gw2wwoud" path="res://Game/Scenes/Player/Guns/Guns/Gun.tscn" id="2_i4qjn"]

[sub_resource type="Animation" id="Animation_kdh1r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.342886, -0.409254, -0.749507)]
}

[sub_resource type="Animation" id="Animation_sc6mr"]
resource_name = "Recoil"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.342886, -0.409254, -0.749507), Vector3(0.342886, -0.409254, -0.39453), Vector3(0.342886, -0.409254, -0.749507)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wj4wv"]
_data = {
"RESET": SubResource("Animation_kdh1r"),
"Recoil": SubResource("Animation_sc6mr")
}

[node name="GunCast" type="RayCast3D"]
target_position = Vector3(0, 0, -100)
script = ExtResource("1_a2okf")

[node name="Arms" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342886, -0.409254, -0.749507)

[node name="Hand" type="CSGSphere3D" parent="Arms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.320952, 0)
radius = 0.225028

[node name="Gun" parent="Arms/Hand" instance=ExtResource("2_i4qjn")]

[node name="AnimArms" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wj4wv")
}

[node name="AtkSpeed" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="AtkSpeed" to="." method="_on_atk_speed_timeout"]
